tests/paczka1/fuzzy1/21979669.err
Error in line 4: S307 S307 86,2
Error in line 10: S6
Error in line 12: 6RLcZJgS S88 47,3
Error in line 13: 6RLcZJgS S307 36,3
Error in line 16: 6RLcZJgS S88 16,5
Error in line 30: 6RLcZJgS S6 39,2
Error in line 36: zvG S6 21,8
